--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "taskov1ch-terminal",
+	"name": "taskov1ch-website",
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
@@ -14,10 +14,10 @@
 		"framer-motion": "^12.23.25",
 		"i18next": "^25.6.3",
 		"i18next-browser-languagedetector": "^8.2.0",
-		"lucide-react": "^0.555.0",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
 		"react-i18next": "^16.3.5",
+		"react-icons": "^5.5.0",
 		"react-markdown": "^10.1.0",
 		"react-router-dom": "^7.9.6",
 		"rehype-raw": "^7.0.0",
