--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
 		"dev": "vite",
 		"build": "tsc -b && vite build",
 		"lint": "eslint .",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d dist -r https://github.com/taskov1ch/taskov1ch.github.io.git"
 	},
 	"dependencies": {
 		"@tailwindcss/typography": "^0.5.19",
@@ -34,6 +36,7 @@
 		"eslint": "^9.39.1",
 		"eslint-plugin-react-hooks": "^7.0.1",
 		"eslint-plugin-react-refresh": "^0.4.24",
+		"gh-pages": "^6.3.0",
 		"globals": "^16.5.0",
 		"tailwindcss": "^4.1.17",
 		"typescript": "~5.9.3",
